k8s/jupyterhub/ingress-k3d-traefik.yaml
# Ingress for JupyterHub with Traefik Middleware
# Requires Traefik CRDs to be installed first
# Use this when you have full Traefik support with CRDs
---
# Traefik Middleware for JupyterHub headers
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jupyterhub-headers
  namespace: jhub-dev
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "http"
    customResponseHeaders:
      X-Frame-Options: "SAMEORIGIN"
---
# Ingress for JupyterHub in k3d (routes through Traefik)
# This allows JupyterHub to be accessed at http://localhost:8080/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  namespace: jhub-dev
  annotations:
    # Traefik annotations
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: jhub-dev-jupyterhub-headers@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-public
            port:
              number: 80
